# rope_editor

./: .gitignore  .pubignore  CHANGELOG.md  CMakeLists.txt  LICENSE  NOTICE  README.md  flutter_rust_bridge.yaml  pubspec.yaml
.github/workflows/: ci.yml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
doc/: README.md  batch-operations.md  indentation.md  lsp-compatibility.md  metrics.md  range-text-access.md  search.md  word-navigation.md
doc/zed-docs/: diff.md  rope.md  search.md  text.md
example/: pubspec.yaml
example/lib/: main.dart
example/test/: widget_test.dart
ios/: rope_editor.podspec
lib/: rope_editor.dart
lib/src/: styling.dart
linux/: CMakeLists.txt
macos/: rope_editor.podspec
rust/: Cargo.toml
rust/src/: api.rs  frb_generated.rs  lib.rs
rust/src/orchestrator/: auto_continue.rs  dispatch.rs  edit_stream.rs  file_index.rs  llm.rs  mod.rs  project_context.rs  prompt.rs  smart_edit.rs  token_budget.rs  truncate.rs
rust/src/zed_rope/: chunk.rs  mod.rs  offset_utf16.rs  point.rs  point_utf16.rs  unclipped.rs
rust/src/zed_sum_tree/: cursor.rs  mod.rs  tree_map.rs
scripts/: AGENTS.md  trace_calls.sh
test/: dart_highlight_enhanced_test.dart  find_controller_escape_test.dart  indent_selection_test.dart  keyboard_reopen_behavior_test.dart  mouse_click_selection_test.dart  performance_test.dart  rope_editor_test.dart  shift_selection_behavior_test.dart  syntax_highlighter_test.dart  touch_gesture_behavior_test.dart  undo_redo_test.dart  word_navigation_test.dart
windows/: CMakeLists.txt
(+21 files in other folders)
