[package]
name = "rope_editor"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

[lib]
name = "rope_editor"
path = "src/lib.rs" # Ensure this file exists at rust/src/lib.rs
crate-type = ["staticlib", "cdylib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
parking_lot = "0.12"
regex = "1.10"
heapless = "0.8"
unicode-segmentation = "1.10"
rayon = "1.10"
log = "0.4"
bytecount = "0.6"

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(frb_expand)'] }
